--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,10 +13,6 @@
     }
   
   }
-  .nav-image {
-    // border-radius: 5px;
-    // @media @phone {width: 100%;};
-  }
 
   .space-images {
     display: flex;
