--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,12 +10,16 @@
     border-bottom: @nav-border;
     @media @phone {width: 100%;};
 
+
     h2 {
-        @media @phone {};
+        margin-left: 30px;
+        @media @phone {width: 100%;};
     }
     .nav-text-section {
+        align-content: center;
         border-radius: 5px;
-        @media @phone {width: 100%;};
+        // @media @phone {width: 100%;};
+
     }
     .nav-a-links {
         margin: 10px 0px;
